--- a/client/App.module.scss
+++ b/client/App.module.scss
@@ -8,6 +8,14 @@ body {
   font-family: "QuickSand", sans-serif;
 }
 
+.main_container {
+  @media (min-width: 768px) {
+    width: 80%;
+    box-sizing: border-box;
+    margin-left: 20%;
+  }
+}
+
 h1 {
   font-family: "QuickSand", sans-serif;
   font-weight: 500;
