--- a/client/App.module.scss
+++ b/client/App.module.scss
@@ -14,6 +14,11 @@ body {
     box-sizing: border-box;
     margin-left: 20%;
   }
+
+  @media (min-width: 1024px) {
+    width: 85%;
+    margin-left: 15%;
+  }
 }
 
 h1 {
