--- a/widgets/chatboxes/Rewire/Chat.module.scss
+++ b/widgets/chatboxes/Rewire/Chat.module.scss
@@ -49,6 +49,7 @@
     margin: 0;
     padding: 0;
     font-family: "Lato", sans-serif;
+    font-size: 24px;
   }
 }
 
@@ -160,6 +161,10 @@
   }
   -ms-overflow-style: none;
   scrollbar-width: none;
+
+  @media screen and (min-width: 768px) {
+    padding: 24px 56px 82px 82px;
+  }
 }
 
 .disclaimers {
@@ -191,7 +196,6 @@
   box-shadow: 0.2px 0.2px 8px rgba(0, 0, 0, 0.25);
   margin-bottom: 24px;
   border-radius: 5px;
-  text-align: left;
 
   @media (min-width: 768px) {
     width: 60%;
@@ -202,7 +206,8 @@
   color: white;
   padding: 0;
   margin: 0;
-  text-align: left;
+  font-weight: 500;
+  font-size: 16px;
 }
 
 @keyframes chatIn {
