--- a/widgets/chatboxes/Rewire/Chat.module.scss
+++ b/widgets/chatboxes/Rewire/Chat.module.scss
@@ -13,6 +13,7 @@
   );
   padding-inline: 0;
   padding-bottom: 64px;
+  overflow: hidden;
 
   @media (min-width: 768px) {
     // padding-inline: 24px;
@@ -176,7 +177,7 @@
     }
   }
 
-  .primary {
+  .action {
     background: linear-gradient(
       90deg,
       rgba(22, 20, 219, 0.8) 0%,
@@ -217,7 +218,7 @@
     }
   }
 
-  .secondary {
+  .message {
     background-color: transparent;
     border-width: 2px;
     border-style: solid;
