feat: added some styling stuff

--- a/client/App.module.scss
+++ b/client/App.module.scss
@@ -1,6 +1,7 @@
 html {
   // * Colors
   --background-color: #1e1e1e;
+  --background-dark: #000;
   --background-alt: #2e2e2e;
   --background-contrast: #3e3e3e;
   --text-color: #ffffff;
