--- a/widgets/chatboxes/Floating/Floating.module.scss
+++ b/widgets/chatboxes/Floating/Floating.module.scss
@@ -1,7 +1,9 @@
+@import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Quicksand:wght@300;400;500;600;700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+
 .onyx {
   position: fixed;
   right: 24px;
-  z-index: 100;
+  z-index: 175;
   transition: all 0.75s ease-in-out;
 
   --amountToProtrude: 24px;
@@ -11,7 +13,11 @@
   height: 56px;
   width: 56px;
   border-radius: 50%;
-  background: linear-gradient(90deg, #1614db 0%, #8709e8 100%);
+  background: linear-gradient(
+    90deg,
+    rgb(22, 20, 219, 0.8) 0%,
+    rgb(135, 9, 232, 0.8) 100%
+  );
   display: flex;
   align-items: center;
   justify-content: center;
@@ -207,20 +213,37 @@
   }
 }
 
+@keyframes chatsIn {
+  0% {
+    transform: translateY(100%);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
+
 .chatContainer {
   position: fixed;
-  top: 82px;
-  left: 14px;
-  right: 14px;
-  bottom: 124px;
-  backdrop-filter: blur(4px);
-  background: rgba(0, 0, 0, 0.5);
-  border: 1px solid rgba(255, 255, 255, 0.1);
-  z-index: 101;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: linear-gradient(
+    90deg,
+    rgb(22, 20, 219, 0.25) 0%,
+    rgb(135, 9, 232, 0.65) 100%
+  );
+  backdrop-filter: blur(6px) brightness(0.5);
+  z-index: 170;
   display: flex;
   align-items: center;
   justify-content: center;
   transition: all 0.3s ease-in-out;
+  animation-name: chatsIn;
+  animation-duration: 0.4s;
+  animation-timing-function: ease-out;
+  animation-fill-mode: forwards;
+  box-shadow: 0.2px 0.2px 25px 0 rgba($color: #000000, $alpha: 0.15);
 
   @media screen and (min-width: 768px) {
     left: initial;
