--- a/widgets/chatboxes/Floating/justincase.scss
+++ b/widgets/chatboxes/Floating/justincase.scss
@@ -1,162 +1,56 @@
-@import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Quicksand:wght@300;400;500;600;700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
-
 .chatBox {
-  height: 100%;
   width: 100%;
   box-sizing: border-box;
-  text-align: left;
+  height: 100%;
   position: relative;
+  background: linear-gradient(
+    270deg,
+    rgba(135, 9, 232, 0.35) 25%,
+    rgb(22, 20, 219, 0.65) 60%,
+    rgba(0, 0, 0, 0.35) 100%
+  );
+  padding-inline: 0;
+  padding-bottom: 64px;
+  overflow: hidden;
+
+  @media (min-width: 768px) {
+    // padding-inline: 24px;
+  }
 }
 
 .header {
-  padding: 24px 24px;
-  border-bottom: 1px solid white;
+  padding: 18px 24px;
+  z-index: 100;
+  color: white;
+  background-color: #2e2e2e;
+  display: flex;
+  align-items: center;
+  gap: 14px;
+  box-sizing: border-box;
+  box-shadow: 0.2px 0.2px 18px 0 rgba($color: #000000, $alpha: 0.25);
 
-  @media (min-width: 768px) {
-    padding: 24px 36px;
+  .tag {
+    border: 1px solid white;
+    padding: 4px 8px;
+    font-size: 12px;
+    font-weight: 500;
+    font-family: "QuickSand", sans-serif;
+    display: inline-block;
+    border-radius: 5px;
   }
 
   h3 {
-    font-size: 24px;
-    font-weight: 400;
-    margin: 0;
-  }
-}
-
-.chatBoxMessages {
-  padding: 24px 24px;
-  scrollbar-width: thin;
-  max-height: 75%;
-  overflow-x: scroll;
-  scrollbar-color: rgba(255, 255, 255, 0.5) transparent;
-
-  @media (min-width: 768px) {
-    padding: 24px 36px;
-  }
-
-  .disclaimers {
-    margin-bottom: 24px;
-    border-bottom: 1px solid rgba($color: #fff, $alpha: 0.25);
-
-    p {
-      font-weight: 500;
-      font-size: 10px;
-
-      @media (min-width: 768px) {
-        font-size: 13px;
-      }
-
-      svg {
-        position: relative;
-        top: 2px;
-      }
-    }
-  }
-
-  .chat {
-    width: 80%;
-    box-sizing: border-box;
-    padding: 14px 24px;
-    font-size: 16px;
     font-weight: 500;
-    margin-bottom: 24px;
-    box-shadow: 0.2px 0.2px 24px rgba(0, 0, 0, 0.1);
-
-    @media (min-width: 768px) {
-      width: 80%;
-    }
-
-    .chatMessage {
-      margin: 0;
-      padding: 0;
-      color: white;
-    }
-  }
-
-  .bot {
-    margin-right: auto;
-    background: linear-gradient(
-      90deg,
-      rgb(22, 20, 219, 0.65) 0%,
-      rgb(135, 9, 232, 0.4) 100%
-    );
-    position: relative;
-
-    a {
-      color: white;
-      text-decoration: underline;
-    }
-
-    .options {
-      position: absolute;
-      right: -36px;
-
-      &__report {
-        font-size: 16px;
-        border: none;
-        background-color: transparent;
-        color: white;
-        cursor: pointer;
-        transition: all 0.3s ease-in-out;
-
-        &:hover {
-          color: #ff0000;
-        }
-      }
-    }
-  }
-
-  .user {
-    margin-left: auto;
-    background-color: black;
-  }
-}
-
-.chatLoading {
-  display: flex;
-  align-items: center;
-  justify-content: flex-start;
-}
-
-.lds-ring {
-  display: inline-block;
-  position: relative;
-  width: 45px;
-  height: 45px;
-}
-.lds-ring div {
-  box-sizing: border-box;
-  display: block;
-  position: absolute;
-  width: 36px;
-  height: 36px;
-  margin: 4px;
-  border: 4px solid #fff;
-  border-radius: 50%;
-  animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
-  border-color: #fff transparent transparent transparent;
-}
-.lds-ring div:nth-child(1) {
-  animation-delay: -0.45s;
-}
-.lds-ring div:nth-child(2) {
-  animation-delay: -0.3s;
-}
-.lds-ring div:nth-child(3) {
-  animation-delay: -0.15s;
-}
-@keyframes lds-ring {
-  0% {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(360deg);
+    margin: 0;
+    padding: 0;
+    font-family: "Lato", sans-serif;
+    font-size: 24px;
   }
 }
 
 .chatBoxInput {
   position: absolute;
-  bottom: 84px;
+  bottom: 14px;
   box-sizing: border-box;
   left: 14px;
   right: 14px;
@@ -170,9 +64,6 @@
 
   @media (min-width: 768px) {
     flex-direction: row;
-    right: 24px;
-    left: 24px;
-    bottom: 24px;
   }
 
   &:focus-within {
@@ -207,7 +98,7 @@
     &:focus {
       border-left: 2.5px solid rgba($color: #fff, $alpha: 0.75);
       opacity: 1;
-      padding: 0 18px;
+      padding: 0 14px;
 
       @media (min-width: 768px) {
         padding: 0 24px;
@@ -373,5 +264,164 @@
     &:active {
       transform: translateY(2px) scale(0.99);
     }
+  }
+}
+
+.chatBoxMessages {
+  width: 100%;
+  height: 100%;
+  overflow-y: scroll;
+  padding: 24px;
+  padding-bottom: 124px;
+  box-sizing: border-box;
+  scrollbar-width: thin;
+  scrollbar-color: var(--background-contrast) transparent;
+
+  @media screen and (min-width: 768px) {
+    padding: 24px 82px 82px 82px;
+  }
+}
+
+.disclaimers {
+  margin-bottom: 24px;
+  border-bottom: 1px solid rgba($color: #fff, $alpha: 0.25);
+  padding-bottom: 8px;
+  text-align: left;
+}
+
+.disclaimer {
+  font-size: 10px;
+  font-weight: 600;
+  color: white;
+  opacity: 0.75;
+  margin: 4px 0;
+
+  svg {
+    display: inline-block;
+    vertical-align: middle;
+    font-size: 11px;
+    position: relative;
+    bottom: 1.5px;
+  }
+}
+
+.chat {
+  box-sizing: border-box;
+  width: 80%;
+  padding: 14px 18px;
+  box-shadow: 0.2px 0.2px 8px rgba(0, 0, 0, 0.25);
+  margin-bottom: 24px;
+  border-radius: 5px;
+
+  @media (min-width: 768px) {
+    width: 60%;
+  }
+}
+
+.chatMessage {
+  color: white;
+  padding: 0;
+  margin: 0;
+  font-weight: 500;
+  font-size: 16px;
+  text-align: left;
+}
+
+@keyframes chatIn {
+  0% {
+    transform: translateY(50%);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
+
+.user {
+  background-color: black;
+  margin-left: auto;
+  animation-name: chatIn;
+  animation-duration: 0.5s;
+  animation-timing-function: ease-in-out;
+  animation-fill-mode: forwards;
+}
+
+.bot {
+  margin-right: auto;
+  font-weight: 600;
+  background: linear-gradient(
+    90deg,
+    rgba(22, 20, 219, 0.8) 0%,
+    rgba(74, 15, 225, 0.6) 50%,
+    rgba(135, 9, 232, 0.3) 100%
+  );
+  animation-name: chatIn;
+  animation-duration: 0.5s;
+  animation-timing-function: ease-in-out;
+  animation-fill-mode: forwards;
+  position: relative;
+
+  a {
+    color: white;
+    text-decoration: underline;
+  }
+
+  .options {
+    position: absolute;
+    right: -36px;
+
+    &__report {
+      font-size: 16px;
+      border: none;
+      background-color: transparent;
+      color: white;
+      cursor: pointer;
+      transition: all 0.3s ease-in-out;
+
+      &:hover {
+        color: #ff0000;
+      }
+    }
+  }
+}
+
+.chatLoading {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+}
+
+.lds-ring {
+  display: inline-block;
+  position: relative;
+  width: 45px;
+  height: 45px;
+}
+.lds-ring div {
+  box-sizing: border-box;
+  display: block;
+  position: absolute;
+  width: 36px;
+  height: 36px;
+  margin: 4px;
+  border: 4px solid #fff;
+  border-radius: 50%;
+  animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+  border-color: #fff transparent transparent transparent;
+}
+.lds-ring div:nth-child(1) {
+  animation-delay: -0.45s;
+}
+.lds-ring div:nth-child(2) {
+  animation-delay: -0.3s;
+}
+.lds-ring div:nth-child(3) {
+  animation-delay: -0.15s;
+}
+@keyframes lds-ring {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
   }
 }
