--- a/client/Global.scss
+++ b/client/Global.scss
@@ -38,3 +38,70 @@ button {
     font-weight: 500;
   }
 }
+
+.form {
+  padding: 18px 24px 24px 24px;
+  box-shadow: inset 0.2px 0.2px 10px 0 rgba(0, 0, 0, 0.15);
+  text-align: left;
+  height: 100%;
+  overflow-y: scroll;
+  scrollbar-width: thin;
+  scrollbar-color: var(--background-contrast) transparent;
+  background-color: var(--background-alt);
+
+  h2 {
+    font-weight: 500;
+    margin: 0;
+    font-size: 24px;
+  }
+
+  h3 {
+    font-weight: 500;
+    margin: 0;
+    margin-top: 12px;
+    font-size: 18px;
+    opacity: 0.75;
+  }
+
+  .resources {
+    font-size: 14px;
+    margin: 0;
+    opacity: 0.75;
+    color: var(--text-color-light);
+    transition: all 0.2s ease-in-out;
+    margin-bottom: 24px;
+    padding-bottom: 14px;
+    border-bottom: 1px solid var(--background-contrast);
+
+    &:hover {
+      opacity: 1;
+    }
+
+    a {
+      text-decoration: underline;
+      color: var(--text-color-light);
+      opacity: 1;
+      font-weight: 500;
+    }
+  }
+
+  .list {
+    padding: 0;
+    margin: 0;
+    list-style: none;
+
+    li {
+      padding-left: 8px;
+      border-left: 1px solid var(--background-contrast);
+      transition: all 0.2s ease-in-out;
+      font-size: 14px;
+      margin-bottom: 14px;
+      cursor: pointer;
+
+      &:hover {
+        border-left: 2px solid rgba(255, 0, 0, 0.6);
+        padding-left: 14px;
+      }
+    }
+  }
+}
