fix: buttons should go to the right

--- a/widgets/chatboxes/Floating/Chatbox.module.scss
+++ b/widgets/chatboxes/Floating/Chatbox.module.scss
@@ -256,7 +256,7 @@
     flex-direction: row;
     justify-content: flex-start;
     position: absolute;
-    left: 0;
+    right: 0;
     bottom: calc(100% + 14px);
     gap: 14px;
 
