--- a/widgets/chatboxes/Floating/Chatbox.module.scss
+++ b/widgets/chatboxes/Floating/Chatbox.module.scss
@@ -6,20 +6,32 @@
   box-sizing: border-box;
   text-align: left;
   position: relative;
+  border: 1px solid #2256f2;
+  background-color: white;
 }
 
 .header {
-  padding: 24px 24px;
-  border-bottom: 1px solid white;
+  padding: 14px 24px;
+  color: black;
+  border-bottom: 1px solid #eaeaea;
+  display: flex;
+  align-items: center;
+  gap: 14px;
 
   @media (min-width: 768px) {
-    padding: 24px 36px;
+    padding: 18px 24px;
+  }
+
+  .icon {
+    display: flex;
+    align-items: center;
   }
 
   h3 {
     font-size: 24px;
-    font-weight: 400;
+    font-weight: 600;
     margin: 0;
+    font-family: "Lato", sans-serif;
   }
 }
 
@@ -29,6 +41,7 @@
   max-height: 75%;
   overflow-x: scroll;
   scrollbar-color: rgba(255, 255, 255, 0.5) transparent;
+  color: black;
 
   @media (min-width: 768px) {
     padding: 24px 36px;
@@ -36,15 +49,13 @@
 
   .disclaimers {
     margin-bottom: 24px;
-    border-bottom: 1px solid rgba($color: #fff, $alpha: 0.25);
+    border-bottom: 1px solid rgba($color: #000, $alpha: 0.25);
+    padding-bottom: 8px;
 
     p {
       font-weight: 500;
       font-size: 10px;
-
-      @media (min-width: 768px) {
-        font-size: 13px;
-      }
+      margin-bottom: 4px;
 
       svg {
         position: relative;
@@ -54,33 +65,38 @@
   }
 
   .chat {
-    width: 80%;
+    width: 65%;
     box-sizing: border-box;
     padding: 14px 24px;
     font-size: 16px;
     font-weight: 500;
     margin-bottom: 24px;
-    box-shadow: 0.2px 0.2px 24px rgba(0, 0, 0, 0.1);
+    box-shadow: 0.2px 0.2px 14px rgba(0, 0, 0, 0.1);
+    border-radius: 5px;
 
     @media (min-width: 768px) {
-      width: 80%;
+      width: 70%;
     }
 
     .chatMessage {
       margin: 0;
       padding: 0;
-      color: white;
+      color: black;
     }
   }
 
   .bot {
     margin-right: auto;
-    background: linear-gradient(
-      90deg,
-      rgb(22, 20, 219, 0.65) 0%,
-      rgb(135, 9, 232, 0.4) 100%
-    );
+    background: white;
     position: relative;
+    border-width: 2px;
+    border-style: solid;
+    border-image: linear-gradient(
+        90deg,
+        rgba(22, 20, 219, 0.8) 0%,
+        rgba(135, 9, 232, 0.35) 100%
+      )
+      1;
 
     a {
       color: white;
@@ -95,7 +111,7 @@
         font-size: 16px;
         border: none;
         background-color: transparent;
-        color: white;
+        color: black;
         cursor: pointer;
         transition: all 0.3s ease-in-out;
 
@@ -108,7 +124,9 @@
 
   .user {
     margin-left: auto;
-    background-color: black;
+    background-color: white;
+    color: black;
+    border: 1px solid #eaeaea;
   }
 }
 
@@ -156,11 +174,12 @@
 
 .chatBoxInput {
   position: absolute;
-  bottom: 24px;
+  bottom: 36px;
   box-sizing: border-box;
   left: 14px;
   right: 14px;
-  background-color: #000000;
+  background-color: white;
+  color: black;
   display: flex;
   box-shadow: inset 0.2px 0.2px 20px rgba(0, 0, 0, 0.15);
   height: 45px;
@@ -172,7 +191,7 @@
     flex-direction: row;
     right: 24px;
     left: 24px;
-    bottom: 24px;
+    bottom: 36px;
   }
 
   &:focus-within {
@@ -198,14 +217,15 @@
     font-size: 16px;
     outline: none;
     background-color: transparent;
-    color: white;
+    color: black;
     font-family: "QuickSand", sans-serif;
     width: 100%;
     transition: all 0.3s ease-in-out;
     opacity: 0.9;
+    font-weight: 500;
 
     &:focus {
-      border-left: 2.5px solid rgba($color: #fff, $alpha: 0.75);
+      border-left: 2.5px solid rgba($color: #000, $alpha: 1);
       opacity: 1;
       padding: 0 18px;
 
@@ -226,16 +246,16 @@
     width: 124px;
     box-sizing: border-box;
     border: none;
-    background: linear-gradient(
-      90deg,
-      #1614db -0.29%,
-      rgba(135, 9, 232, 0.5) 100%
-    );
     box-shadow: -2px 0px 15px rgba(0, 0, 0, 0.15);
-    color: white;
     cursor: pointer;
     transition: all 0.3s ease-in-out;
     opacity: 0.9;
+    background-image: linear-gradient(
+      90deg,
+      rgba(22, 20, 219, 1) 0%,
+      rgba(135, 9, 232, 0.5) 100%
+    );
+    color: white;
 
     @media (min-width: 768px) {
       display: inline-block;
@@ -261,7 +281,6 @@
     gap: 14px;
 
     @media screen and (min-width: 768px) {
-      right: 68px;
     }
   }
 
@@ -272,12 +291,13 @@
     font-size: 12px;
     font-family: "QuickSand", sans-serif;
     font-weight: 600;
-    color: white;
+    color: black;
     cursor: pointer;
     box-shadow: 0.2px 0.2px 10px rgba(0, 0, 0, 0.25);
     transition: all 0.3s ease-in-out;
     border-radius: 2.5px;
     box-sizing: border-box;
+    background-color: white;
 
     @media (min-width: 768px) {
       display: 14px;
@@ -285,11 +305,7 @@
   }
 
   .action {
-    background: linear-gradient(
-      90deg,
-      rgba(22, 20, 219, 0.8) 0%,
-      rgba(135, 9, 232, 0.35) 100%
-    );
+    border: 1px solid #2256f2;
     transition: all 0.3s ease-in-out;
     opacity: 0.9;
 
@@ -354,8 +370,8 @@
       opacity: 0;
       background: linear-gradient(
         90deg,
-        rgba(22, 20, 219, 0.8) 0%,
-        rgba(135, 9, 232, 0.35) 100%
+        rgba(22, 20, 219, 1) 0%,
+        rgba(135, 9, 232, 0.5) 100%
       );
       transition: all 0.3s ease-in-out;
       z-index: 1;
@@ -363,6 +379,7 @@
 
     &:hover {
       opacity: 1;
+      color: white;
 
       &::before {
         width: 100%;
@@ -372,6 +389,32 @@
 
     &:active {
       transform: translateY(2px) scale(0.99);
+    }
+  }
+
+  .poweredBy {
+    position: absolute;
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    top: calc(100%);
+    // center it
+    left: 50%;
+    transform: translateX(-50%);
+
+    svg {
+      width: 16px;
+    }
+
+    p {
+      font-weight: 500;
+      opacity: 0.5;
+      font-size: 10px;
+
+      a {
+        color: black;
+        text-decoration: underline;
+      }
     }
   }
 }
