--- a/widgets/chatboxes/Floating/Chatbox.module.scss
+++ b/widgets/chatboxes/Floating/Chatbox.module.scss
@@ -82,6 +82,8 @@
       margin: 0;
       padding: 0;
       color: black;
+      font-weight: 600;
+      font-family: "QuickSand", sans-serif;
     }
   }
 
@@ -149,10 +151,10 @@
   width: 36px;
   height: 36px;
   margin: 4px;
-  border: 4px solid #fff;
+  border: 4px solid #000;
   border-radius: 50%;
   animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
-  border-color: #fff transparent transparent transparent;
+  border-color: #2256f2 transparent transparent transparent;
 }
 .lds-ring div:nth-child(1) {
   animation-delay: -0.45s;
