--- a/widgets/chatboxes/Floating/Floating.module.scss
+++ b/widgets/chatboxes/Floating/Floating.module.scss
@@ -14,8 +14,8 @@
 }
 
 .container {
-  height: 57px;
-  width: 57px;
+  height: 48px;
+  width: 48px;
   border-radius: 50%;
   background: rgba($color: #000, $alpha: 1);
   display: flex;
@@ -28,6 +28,15 @@
   color: white;
   border: 1px solid rgba($color: #eaeaea, $alpha: 0.35);
 
+  @media screen and (min-width: 768px) {
+    height: 56px;
+    width: 56px;
+
+    svg {
+      font-size: 24px;
+    }
+  }
+
   &:hover {
     border-color: #eaeaea;
   }
@@ -37,7 +46,7 @@
   }
 
   svg {
-    font-size: 24px;
+    font-size: 20px;
   }
 }
 
