--- a/widgets/chatboxes/Floating/Floating.module.scss
+++ b/widgets/chatboxes/Floating/Floating.module.scss
@@ -31,10 +31,6 @@
   @media screen and (min-width: 768px) {
     height: 56px;
     width: 56px;
-
-    svg {
-      font-size: 24px;
-    }
   }
 
   &:hover {
@@ -47,6 +43,10 @@
 
   svg {
     font-size: 20px;
+
+    @media screen and (min-width: 768px) {
+      font-size: 24px;
+    }
   }
 }
 
