--- a/widgets/chatboxes/Floating/Chatbox.module.scss
+++ b/widgets/chatboxes/Floating/Chatbox.module.scss
@@ -51,6 +51,7 @@
     margin-bottom: 24px;
     border-bottom: 1px solid rgba($color: #000, $alpha: 0.25);
     padding-bottom: 8px;
+    color: black;
 
     p {
       font-weight: 500;
