feat: went overboard on disclaimer component

--- a/client/App.module.scss
+++ b/client/App.module.scss
@@ -19,6 +19,8 @@ html {
   --warning-contrast: #ffffff;
   --info-color: #147adb;
   --info-contrast: #ffffff;
+  --accent-color: #8709e8;
+  --accent-contrast: #ffffff;
 
   // * Fonts
   --font-family: "QuickSand", sans-serif;
