--- a/client/Global.scss
+++ b/client/Global.scss
@@ -15,11 +15,56 @@ button {
 .beta {
   font-size: 10px;
   padding: 4px 8px;
-  border-radius: 3px;
   color: var(--text-color);
   background-color: transparent;
-  border: 1px solid var(--text-color);
   margin: 4px;
+  vertical-align: middle;
+  position: relative;
+  overflow: hidden;
+  z-index: 5;
+
+  &.small {
+    font-size: 8px;
+    padding: 2px 4px;
+  }
+
+  &::before {
+    content: "";
+    background-image: linear-gradient(
+      90deg,
+      var(--primary-color) 0,
+      var(--deep-primary-color) 40%,
+      var(--primary-color) 100%
+    );
+    background-repeat: no-repeat;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    box-sizing: border-box;
+    z-index: 4;
+  }
+
+  &:hover {
+    &::after {
+      content: "This feature is in beta and may be unstable. Feedback is appreciated.";
+      position: absolute;
+      top: 100%;
+      left: 50%;
+      transform: translateX(-50%);
+      font-size: 11px;
+      padding: 4px 8px;
+      border-radius: 3px;
+      color: var(--text-color);
+      background-color: var(--background-contrast);
+      border: 1px solid var(--text-color);
+      margin: 4px;
+      vertical-align: middle;
+      z-index: 100;
+      font-weight: 600;
+    }
+  }
 }
 
 .disclaimer {
