--- a/widgets/chatboxes/Floating/Chatbox.module.scss
+++ b/widgets/chatboxes/Floating/Chatbox.module.scss
@@ -57,6 +57,7 @@
       font-weight: 500;
       font-size: 10px;
       margin-bottom: 4px;
+      color: black;
 
       svg {
         position: relative;
